--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://120.79.62.62:3306/fgpm?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&amp;autoReconnect=true&amp;autoReconnectForPools=true
+jdbc.url=jdbc:mysql://120.79.62.62:3306/fgpm_test?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&amp;autoReconnect=true&amp;autoReconnectForPools=true
 jdbc.username=root
 jdbc.password=123456
